Officer page is re-done.

--- a/pages/officers.html
+++ b/pages/officers.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" charset="UTF-8">
-    <title>Title</title>
+    <title>Officers</title>
 
     <!-- Latest compiled and minified CSS -->
 
     <link rel="icon" href="../Images/CSULALogo.png">
 
-    <link rel="stylesheet" href="../css/officers-styles.css">
     <link rel="stylesheet" href="../css/DarklyBootstrap.css">
+    <link rel="stylesheet" href="../css/officers-styles.css">
     <link rel="stylesheet" href="../css/global-styles.css">
 
 </head>
@@ -30,10 +30,10 @@
                         <li><a href="Main.html">Home</a></li>
                         <li><a href="calendar.html">Calendar</a></li>
                         <li><a href="projects.html">Projects</a></li>
-                        <li><a href="officers.html">Officers</a></li>
+                        <li class="active-tab"><a href="officers.html">Officers</a></li>
                         <!--<li class="active-tab"><a href="contact.html">Contact</a></li>-->
 
-                        <li class="dropdown active-tab">
+                        <li class="dropdown">
                             <a href="contact.html" class="dropdown-toggle" data-toggle="dropdown" role="button"
                                aria-haspopup="true" aria-expanded="false">
                                 Contact<span class="caret"></span>
@@ -41,10 +41,12 @@
                             <ul class="dropdown-menu">
                                 <li><a href="contact.html">All Media</a></li>
                                 <li><a href="contact.html">Email</a></li>
-                                <li><a href="https://www.instagram.com/filmproductionsla/" target="_blank">Instagram</a></li>
+                                <li><a href="https://www.instagram.com/filmproductionsla/" target="_blank">Instagram</a>
+                                </li>
                                 <li><a href="https://www.youtube.com/channel/UCVNo9r8Dl361BN_h21enm-g/featured"
                                        target="_blank">YouTube</a></li>
-                                <li><a href="https://www.facebook.com/FilmProductionsLA/" target="_blank">Facebook</a></li>
+                                <li><a href="https://www.facebook.com/FilmProductionsLA/" target="_blank">Facebook</a>
+                                </li>
                                 <li><a href="../Images/Snapcode%20Cropped.png" target="_blank">Snapchat</a></li>
                                 <li><a href="https://twitter.com/csulafp" target="_blank">Twitter</a></li>
                             </ul>
@@ -83,7 +85,10 @@
                         <div class="text-right col-4">
                             <h1>
                                 <strong>Officer Positions</strong><br/>
-                                <small>For a full list of our current Officer positions and their incumbents, please contact us at <a href="mailto:filmproductionsla@gmail.com?Subject=Hello%20FilmProductions">FilmProductionsLA@gmail.com</a></small>
+                                <small>For a full list of our current Officer positions and their incumbents, please
+                                    contact us at <a
+                                            href="mailto:filmproductionsla@gmail.com?Subject=Hello%20FilmProductions">FilmProductionsLA@gmail.com</a>
+                                </small>
                             </h1>
                         </div>
 
@@ -92,12 +97,79 @@
             </div>
         </div>
         <!---------------------------END HEADER--------------------------->
+        <div class="container">
+            <div class="row">
+                <ul class="list-group col-xs-offset-1 col-xs-10">
+                    <li class="list-group-item primaries">President</li>
+                    <li class="list-group-item">
+                        The President of Film Productions is responsible for planning,
+                        organizing, and carrying out responsibilities associated with being the club’s chief executive
+                        officer,
+                        such as, but not limited to: appointing and delegating tasks, attending all meetings,
+                        setting goals for the club and making sure the club stays on course,
+                        solving problems within or regarding the club, and making sure each meeting is well planned and
+                        organized.
+                    </li>
+                </ul>
+            </div>
+            <div class="row">
+                <ul class="list-group col-xs-offset-1 col-xs-10">
+                    <li class="list-group-item primaries">Vice President</li>
+                    <li class="list-group-item">
+                        The Vice-President of Film Productions fulfills the duties of the President when the President
+                        is absent or otherwise unable,
+                        or performs duties assigned by the President. This role is vital,
+                        in that the Vice-President and the President must always remain in good standing and in contact
+                        with each other.
+                    </li>
+                </ul>
+            </div>
+            <div class="row">
+                <ul class="list-group col-xs-offset-1 col-xs-10">
+                    <li class="list-group-item primaries">Treasurer</li>
+                    <li class="list-group-item">
+                        The Treasurer establishes the organization’s budget and records any and all financial
+                        transactions.
+                        The Treasurer must generally attend all fundraiser and club events that have money involved and
+                        must consistently take inventory.
+                    </li>
+                </ul>
+            </div>
+            <div class="row">
+                <ul class="list-group col-xs-offset-1 col-xs-10">
+                    <li class="list-group-item primaries">Additional Executive Officers (2)</li>
+                    <li class="list-group-item">
+                        Additional Executives generally assist all other Officers and help maintain productivity within
+                        the club.
+                        Responsibilities may include but are not limited to: planning fundraisers and socials,
+                        being present when other Officers are unable.
+                    </li>
+                </ul>
+            </div>
+            <div class="row">
+                <ul class="list-group col-xs-offset-1 col-xs-10">
+                    <li class="list-group-item primaries">Supplementary Officers</li>
+                    <li class="list-group-item">
+                        Supplementary officer positions may vary on a semester-to-semester basis depending on club needs.
+                        Officers oversee a specific club function and report to Executive Officers.
+                        Applications for each semester open at the end of the semester that precedes it.
+                        Such positions may include:
+                    </li>
+                    <ul class="list-group col-xs-6" style="padding-right: 0">
+                        <li class="list-group-item">Head of Writing</li>
+                        <li class="list-group-item">Head of Fundraising</li>
+                        <li class="list-group-item">Head of Socials</li>
+                        <li class="list-group-item">Head(s) of Production</li>
+                    </ul>
+                    <ul class="list-group col-xs-6" style="padding-right: 0">
+                        <li class="list-group-item">Head of Marketing</li>
+                        <li class="list-group-item">Head of Production Design</li>
+                        <li class="list-group-item">Head of Equipment</li>
+                    </ul>
 
-
-
-        <script>
-            setPageInfo();
-        </script>
+                </ul>
+            </div>
+        </div>
     </div>
 </div>
 </body>
