Updated projects.html. Added Sophia font to all pages. Moved body background to global css.

--- a/pages/officers.html
+++ b/pages/officers.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="../css/DarklyBootstrap.css">
     <link rel="stylesheet" href="../css/officers-styles.css">
     <link rel="stylesheet" href="../css/global-styles.css">
+    <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
+
 
 </head>
 
