--- a/pages/calendar.html
+++ b/pages/calendar.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="../css/DarklyBootstrap.css">
     <link rel="stylesheet" href="../css/global-styles.css">
     <link rel="stylesheet" href="../css/calendarStyles.css">
+    <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
+
 </head>
 
 <body style="background-color: black">
