--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,8 +9,7 @@
     <link rel="stylesheet" href="../css/DarklyBootstrap.css">
     <link rel="stylesheet" href="../css/global-styles.css">
     <link rel="stylesheet" href="../css/contact-styles.css">
-
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu:400, 700" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
 
     <script type="text/javascript" src="../Javascript/instafeed.min.js"></script>
     <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script>
