--- a/pages/projects.html
+++ b/pages/projects.html
@@ -9,8 +9,6 @@
     <link rel="stylesheet" href="../css/DarklyBootstrap.css">
     <link rel="stylesheet" href="../css/global-styles.css">
     <link rel="stylesheet" href="../css/projects-styles.css">
-    <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
-
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
 
@@ -49,19 +47,6 @@
                         <li><a href="../Images/Snapcode%20Cropped.png" target="_blank">Snapchat</a></li>
                         <li><a href="https://twitter.com/csulafp" target="_blank">Twitter</a></li>
                     </ul>
-
-                    <!--<li class="dropdown">-->
-                    <!--<a href="officers.html" class="dropdown-toggle" data-toggle="dropdown" role="button"-->
-                    <!--aria-haspopup="true"-->
-                    <!--aria-expanded="false">Officers<span class="caret"></span></a>-->
-                    <!--<ul class="dropdown-menu">-->
-                    <!--<li><a href="officers.html">All Officers</a></li>-->
-                    <!--<li><a href="officers.html?id=1">President</a></li>-->
-                    <!--<li><a href="officers.html?id=2">Vice President</a></li>-->
-                    <!--<li><a href="officers.html?id=3">Treasurer</a></li>-->
-                    <!--<li><a href="officers.html?id=4">Additional Officers</a></li>-->
-                    <!--</ul>-->
-                    <!--</li>-->
             </ul>
 
         </div>
@@ -88,12 +73,17 @@
                 <!--<div class="desc"></div>-->
             <!--</div>-->
 
-            <div class="vid-item" onClick="document.getElementById('vid_frame').src='https://www.youtube.com/embed/VRsCSRfoUTA?rel=0&showinfo=0&autohide=1'">
+            <div class="vid-item" onClick="document.getElementById('vid_frame').src='http://youtube.com/embed/YyItLyjtl6U?autoplay=1&rel=0&showinfo=0&autohide=1'">
+                <div class="thumb"><img src="http://img.youtube.com/vi/YyItLyjtl6U/0.jpg"></div>
+                <div class="desc"></div>
+            </div>
+
+            <div class="vid-item" onClick="document.getElementById('vid_frame').src='https://www.youtube.com/embed/VRsCSRfoUTA?autoplay=1rel=0&showinfo=0&autohide=1'">
                 <div class="thumb"><img src="https://img.youtube.com/vi/VRsCSRfoUTA/0.jpg"></div>
                 <div class="desc">Two Dudes go to a Party</div>
             </div>
 
-            <div class="vid-item" onClick="document.getElementById('vid_frame').src='https://www.youtube.com/embed/UOFgemG9sRc?rel=0&showinfo=0&autohide=1'">
+            <div class="vid-item" onClick="document.getElementById('vid_frame').src='https://www.youtube.com/embed/UOFgemG9sRc?autoplay=1rel=0&showinfo=0&autohide=1'">
                 <div class="thumb"><img src="http://img.youtube.com/vi/UOFgemG9sRc/0.jpg"></div>
                 <div class="desc">iPredict</div>
             </div>
